# AIORCHESTRATIONOS-SOVEREIGN-PROPERTY-USE-IMPROVE-AND-GIVE-CREDIT-IF-PROFIT-IS-MADE-SHARE-THE-PIE

.github/workflows/: build-docker.yml  ci.yml
orchestration-os-merged/: .env.example  MASTER_BLUEPRINT.md  PRIORITIES.md  PROGRESS.md  README.md  TODO.md  blueprint.md  blueprint.yaml  package-lock.json  package.json  zo-orchestration-os-master-blueprint.md
orchestration-os-merged/.github/workflows/: build-android.yml  build-docker.yml  build-windows.yml  ci.yml
orchestration-os-merged/dockers/bash/: Dockerfile
orchestration-os-merged/dockers/bun/: Dockerfile
orchestration-os-merged/dockers/deno/: Dockerfile
orchestration-os-merged/dockers/go/: Dockerfile
orchestration-os-merged/dockers/nodejs/: Dockerfile
orchestration-os-merged/dockers/python/: Dockerfile
orchestration-os-merged/dockers/ruby/: Dockerfile
orchestration-os-merged/dockers/rust/: Dockerfile
orchestration-os-merged/output/build-mnbq12r0/: hello.py
orchestration-os-merged/output/build-mnbq22fu/: app.py
orchestration-os-merged/output/build-mnbqthhm/: app.py
orchestration-os-merged/plans/: 00_PROJECT_ROOT.md  01_PYTHON_CONTAINER.md  02_NODEJS_CONTAINER.md  03_BASH_CONTAINER.md
orchestration-os-merged/public/: docker-dashboard.html  index.html
orchestration-os-merged/scripts/bash/: agent.sh
orchestration-os-merged/scripts/rust/: Cargo.toml
orchestration-os-merged/scripts/rust/src/: main.rs
orchestration-os-merged/src/: index.ts  server.ts  types.ts
orchestration-os-merged/test-output/: app.py
orchestration-os-merged/trackers/: 00_DOCKER_STATUS.md  01_PROGRESS_TRACKER.md
(+34 files in other folders)
